continued bfb work, plus proper data cleaning/restriction oops

--- a/data-cleaning.ipynb
+++ b/data-cleaning.ipynb
@@ -340,25 +340,25 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/02/0y19g5t15bn_c1c82kr48pgc0000gn/T/ipykernel_60124/2791280284.py:2: SettingWithCopyWarning: \n",
+      "/var/folders/02/0y19g5t15bn_c1c82kr48pgc0000gn/T/ipykernel_15905/1196998120.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  valid_pcs['PC #'] = pd.to_numeric(valid_pcs['PC #'])\n",
-      "/var/folders/02/0y19g5t15bn_c1c82kr48pgc0000gn/T/ipykernel_60124/2791280284.py:3: SettingWithCopyWarning: \n",
+      "/var/folders/02/0y19g5t15bn_c1c82kr48pgc0000gn/T/ipykernel_15905/1196998120.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  valid_pcs['Temperature'] = valid_pcs['Temperature'].apply(temperature_cleaner)\n",
-      "/var/folders/02/0y19g5t15bn_c1c82kr48pgc0000gn/T/ipykernel_60124/2791280284.py:4: SettingWithCopyWarning: \n",
+      "/var/folders/02/0y19g5t15bn_c1c82kr48pgc0000gn/T/ipykernel_15905/1196998120.py:4: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  valid_pcs['Start_Datetime'] = pd.to_datetime(valid_pcs['Date'] + ' ' + valid_pcs['Start Time'])\n",
-      "/var/folders/02/0y19g5t15bn_c1c82kr48pgc0000gn/T/ipykernel_60124/2791280284.py:5: SettingWithCopyWarning: \n",
+      "/var/folders/02/0y19g5t15bn_c1c82kr48pgc0000gn/T/ipykernel_15905/1196998120.py:5: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -617,7 +617,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>785 rows × 16 columns</p>\n",
+       "<p>743 rows × 16 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -673,7 +673,7 @@
        "794                     - 2024-04-27 15:40:00 2024-04-27 15:50:00  \n",
        "795                     - 2024-04-27 15:54:00 2024-04-27 16:04:00  \n",
        "\n",
-       "[785 rows x 16 columns]"
+       "[743 rows x 16 columns]"
       ]
      },
      "execution_count": 4,
@@ -687,6 +687,7 @@
     "valid_pcs['Temperature'] = valid_pcs['Temperature'].apply(temperature_cleaner)\n",
     "valid_pcs['Start_Datetime'] = pd.to_datetime(valid_pcs['Date'] + ' ' + valid_pcs['Start Time'])\n",
     "valid_pcs['End_Datetime'] = pd.to_datetime(valid_pcs['Date'] + ' ' + valid_pcs['End Time'])\n",
+    "valid_pcs = valid_pcs[(valid_pcs['Temperature'] > -100) & (valid_pcs['Jon\\'s problem checker'] == '-')]\n",
     "valid_pcs"
    ]
   },
@@ -699,7 +700,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/02/0y19g5t15bn_c1c82kr48pgc0000gn/T/ipykernel_60124/2571519122.py:1: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+      "/var/folders/02/0y19g5t15bn_c1c82kr48pgc0000gn/T/ipykernel_15905/2571519122.py:1: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
       "  date_completenesses = valid_pcs.groupby('Date').apply(lambda x: calculate_completeness(x, x['Date'].iloc[0]))\n"
      ]
     }
@@ -714,18 +715,6 @@
    "execution_count": 6,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/02/0y19g5t15bn_c1c82kr48pgc0000gn/T/ipykernel_60124/2333882261.py:1: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  valid_pcs['Date_completeness'] = valid_pcs.apply(lambda x: completeness_dict[x['Date']], axis = 1)\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -989,7 +978,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>785 rows × 17 columns</p>\n",
+       "<p>743 rows × 17 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1058,7 +1047,7 @@
        "794           0.944444  \n",
        "795           0.944444  \n",
        "\n",
-       "[785 rows x 17 columns]"
+       "[743 rows x 17 columns]"
       ]
      },
      "execution_count": 6,
@@ -1073,12 +1062,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Save as CSV\n",
     "valid_pcs.to_csv('pc-data-with-completeness.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['10/6/2023', '10/12/2023', '10/14/2023', '10/20/2023',\n",
+       "       '10/22/2023', '10/25/2023', '10/28/2023', '10/31/2023',\n",
+       "       '11/1/2023', '11/5/2023', '11/8/2023', '11/11/2023', '11/15/2023',\n",
+       "       '11/18/2023', '11/19/2023', '11/21/2023', '12/3/2023', '12/8/2023',\n",
+       "       '12/10/2023', '12/12/2023', '12/13/2023', '12/28/2023',\n",
+       "       '1/14/2024', '1/15/2024', '1/19/2024', '1/21/2024', '1/22/2024',\n",
+       "       '1/25/2024', '1/28/2024', '1/29/2024', '2/5/2024', '2/10/2024',\n",
+       "       '2/15/2024', '2/19/2024', '2/23/2024', '2/24/2024', '2/25/2024',\n",
+       "       '2/29/2024', '3/3/2024', '3/8/2024', '3/10/2024', '3/20/2024',\n",
+       "       '3/22/2024', '4/5/2024', '4/7/2024', '4/8/2024', '4/14/2024',\n",
+       "       '4/19/2024', '4/26/2024', '4/27/2024'], dtype=object)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "valid_pcs['Date'].unique()"
    ]
   },
   {
