Multiple changes (see extended desc.) - Change validity criteria for clean data - Recalculate frequency based on valid data (vs all data) - Add additional graphs and analysis for diversity data

--- a/data-cleaning.ipynb
+++ b/data-cleaning.ipynb
@@ -7,7 +7,10 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from date_completeness import calculate_completeness"
+    "from date_completeness import calculate_completeness\n",
+    "\n",
+    "# Suppress warnings\n",
+    "pd.options.mode.chained_assignment = None"
    ]
   },
   {
@@ -314,7 +317,7 @@
     }
    ],
    "source": [
-    "all_pcs = pd.read_csv(\"point-count-periods.csv\", nrows = 796)\n",
+    "all_pcs = pd.read_csv(\"point-count-periods-clean.csv\", nrows = 796)\n",
     "all_pcs = all_pcs.drop(labels = ['Unnamed: 14', 'Unnamed: 15', 'Unnamed: 16'], axis = 1)\n",
     "all_pcs"
    ]
@@ -328,7 +331,7 @@
     "def temperature_cleaner(temp):\n",
     "    if type(temp) != str or len(temp) != 2:\n",
     "        return -100\n",
-    "    return int(temp)\n"
+    "    return int(temp)"
    ]
   },
   {
@@ -336,36 +339,6 @@
    "execution_count": 4,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/02/0y19g5t15bn_c1c82kr48pgc0000gn/T/ipykernel_15905/1196998120.py:2: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  valid_pcs['PC #'] = pd.to_numeric(valid_pcs['PC #'])\n",
-      "/var/folders/02/0y19g5t15bn_c1c82kr48pgc0000gn/T/ipykernel_15905/1196998120.py:3: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  valid_pcs['Temperature'] = valid_pcs['Temperature'].apply(temperature_cleaner)\n",
-      "/var/folders/02/0y19g5t15bn_c1c82kr48pgc0000gn/T/ipykernel_15905/1196998120.py:4: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  valid_pcs['Start_Datetime'] = pd.to_datetime(valid_pcs['Date'] + ' ' + valid_pcs['Start Time'])\n",
-      "/var/folders/02/0y19g5t15bn_c1c82kr48pgc0000gn/T/ipykernel_15905/1196998120.py:5: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  valid_pcs['End_Datetime'] = pd.to_datetime(valid_pcs['Date'] + ' ' + valid_pcs['End Time'])\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -617,7 +590,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>743 rows × 16 columns</p>\n",
+       "<p>773 rows × 16 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -673,7 +646,7 @@
        "794                     - 2024-04-27 15:40:00 2024-04-27 15:50:00  \n",
        "795                     - 2024-04-27 15:54:00 2024-04-27 16:04:00  \n",
        "\n",
-       "[743 rows x 16 columns]"
+       "[773 rows x 16 columns]"
       ]
      },
      "execution_count": 4,
@@ -687,7 +660,8 @@
     "valid_pcs['Temperature'] = valid_pcs['Temperature'].apply(temperature_cleaner)\n",
     "valid_pcs['Start_Datetime'] = pd.to_datetime(valid_pcs['Date'] + ' ' + valid_pcs['Start Time'])\n",
     "valid_pcs['End_Datetime'] = pd.to_datetime(valid_pcs['Date'] + ' ' + valid_pcs['End Time'])\n",
-    "valid_pcs = valid_pcs[(valid_pcs['Temperature'] > -100) & (valid_pcs['Jon\\'s problem checker'] == '-')]\n",
+    "valid_pcs = valid_pcs[(valid_pcs['Jon\\'s problem checker'] == '-') |\n",
+    "                      ((valid_pcs['Jon\\'s problem checker'] != '-') & (valid_pcs['Location'].notna()))]\n",
     "valid_pcs"
    ]
   },
@@ -700,7 +674,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/02/0y19g5t15bn_c1c82kr48pgc0000gn/T/ipykernel_15905/2571519122.py:1: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+      "/var/folders/02/0y19g5t15bn_c1c82kr48pgc0000gn/T/ipykernel_72700/2571519122.py:1: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
       "  date_completenesses = valid_pcs.groupby('Date').apply(lambda x: calculate_completeness(x, x['Date'].iloc[0]))\n"
      ]
     }
@@ -978,7 +952,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>743 rows × 17 columns</p>\n",
+       "<p>751 rows × 17 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1047,7 +1021,7 @@
        "794           0.944444  \n",
        "795           0.944444  \n",
        "\n",
-       "[743 rows x 17 columns]"
+       "[751 rows x 17 columns]"
       ]
      },
      "execution_count": 6,
@@ -1057,6 +1031,7 @@
    ],
    "source": [
     "valid_pcs['Date_completeness'] = valid_pcs.apply(lambda x: completeness_dict[x['Date']], axis = 1)\n",
+    "valid_pcs = valid_pcs[valid_pcs['Date_completeness'] >= 0.5]\n",
     "valid_pcs"
    ]
   },
@@ -1068,36 +1043,6 @@
    "source": [
     "# Save as CSV\n",
     "valid_pcs.to_csv('pc-data-with-completeness.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['10/6/2023', '10/12/2023', '10/14/2023', '10/20/2023',\n",
-       "       '10/22/2023', '10/25/2023', '10/28/2023', '10/31/2023',\n",
-       "       '11/1/2023', '11/5/2023', '11/8/2023', '11/11/2023', '11/15/2023',\n",
-       "       '11/18/2023', '11/19/2023', '11/21/2023', '12/3/2023', '12/8/2023',\n",
-       "       '12/10/2023', '12/12/2023', '12/13/2023', '12/28/2023',\n",
-       "       '1/14/2024', '1/15/2024', '1/19/2024', '1/21/2024', '1/22/2024',\n",
-       "       '1/25/2024', '1/28/2024', '1/29/2024', '2/5/2024', '2/10/2024',\n",
-       "       '2/15/2024', '2/19/2024', '2/23/2024', '2/24/2024', '2/25/2024',\n",
-       "       '2/29/2024', '3/3/2024', '3/8/2024', '3/10/2024', '3/20/2024',\n",
-       "       '3/22/2024', '4/5/2024', '4/7/2024', '4/8/2024', '4/14/2024',\n",
-       "       '4/19/2024', '4/26/2024', '4/27/2024'], dtype=object)"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "valid_pcs['Date'].unique()"
    ]
   },
   {
